--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -23,6 +23,7 @@ main {
 }
 
 .area {
+  padding-right: 15px;
   width: 100%;
   height: 100px;
   background-color: #4ca875de;
@@ -61,7 +62,7 @@ main {
   color: #fff;
 }
 
-.boutton1 {
+#boutton1 {
   padding: 10px 55px;
   font-size: 30px;
   border-radius: 10px;
